--- a/frontend/src/styles/TaskDuration.css
+++ b/frontend/src/styles/TaskDuration.css
@@ -1,7 +1,8 @@
 /* TaskDuration.css */
 .task-duration-container {
     min-height: 100vh;
-    background: linear-gradient(135deg, #e0f7fa, #fce4ec);
+    /* background: linear-gradient(135deg, #e0f7fa, #fce4ec); */
+    background: linear-gradient(0deg, #4b2268 -12.22%, #641773 64.14%, #92278f 152%);
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -12,7 +13,8 @@
 .task-duration-wrapper {
     width: 100%;
     max-width: 800px;
-    background: #ffffffcc;
+    /* background: #ffffffcc; */
+    background: linear-gradient(0deg, #4b2268 -12.22%, #641773 64.14%, #92278f 152%);
     backdrop-filter: blur(10px);
     border-radius: 20px;
     padding: 30px;
@@ -36,7 +38,8 @@
 }
 
 .task-card {
-    background-color: #f9f9ff;
+    /* background-color: #f9f9ff; */
+    background: linear-gradient(0deg, #4b2268 -12.22%, #641773 64.14%, #92278f 152%);
     padding: 15px 20px;
     margin-bottom: 20px;
     border-left: 5px solid #00bcd4;
@@ -65,7 +68,7 @@
         font-size: 20px;
         font-weight: 600;
         margin-bottom: 20px;
-        color: #4b4b4b;
+        color: #c2c2c2;
     }
     
     .task-card {
