--- a/frontend/src/styles/TaskDuration.css
+++ b/frontend/src/styles/TaskDuration.css
@@ -37,7 +37,7 @@
     color: #555;
 }
 
-.task-card {
+.task-card-d {
     /* background-color: #f9f9ff; */
     background: linear-gradient(0deg, #4b2268 -12.22%, #641773 64.14%, #92278f 152%);
     padding: 15px 20px;
