--- a/frontend/src/styles/TaskDuration.css
+++ b/frontend/src/styles/TaskDuration.css
@@ -70,7 +70,7 @@
         color: #c2c2c2;
     }
     
-    .task-card {
+    .task-card-d {
         background-color: #f9f9ff;
         padding: 15px 5px;
         margin-bottom: 0px;
