--- a/frontend/src/styles/leaderboard.css
+++ b/frontend/src/styles/leaderboard.css
@@ -5,7 +5,7 @@
   background: #f5f5f5;
   background: linear-gradient(100deg, #4b2268 -12.22%, #641773 64.14%, #92278f 152%);
   /* border: 2px solid red; */
-  /* height: 780px; */
+  height: 830px;
 
 }
 .leaderboard-container {
