--- a/frontend/src/styles/loader.css
+++ b/frontend/src/styles/loader.css
@@ -1,6 +1,6 @@
-/* From Uiverse.io by alexruix */ 
+/* From Uiverse.io by alexruix */
 
-.l{
+.l {
     height: 850px;
     max-width: 600px;
     margin: auto;
@@ -10,13 +10,14 @@
     justify-content: center;
     align-items: center;
 }
+
 .loader {
     width: 80px;
     height: 50px;
     position: relative;
-  }
-  
-  .loader-text {
+}
+
+.loader-text {
     position: absolute;
     top: 0;
     padding: 0;
@@ -25,9 +26,9 @@
     animation: text_713 3.5s ease both infinite;
     font-size: .8rem;
     letter-spacing: 1px;
-  }
-  
-  .load {
+}
+
+.load {
     background-color: #9A79FF;
     border-radius: 50px;
     display: block;
@@ -37,9 +38,9 @@
     position: absolute;
     transform: translateX(64px);
     animation: loading_713 3.5s ease both infinite;
-  }
-  
-  .load::before {
+}
+
+.load::before {
     position: absolute;
     content: "";
     width: 100%;
@@ -47,96 +48,216 @@
     background-color: #D1C2FF;
     border-radius: inherit;
     animation: loading2_713 3.5s ease both infinite;
-  }
-  
-  @keyframes text_713 {
+}
+
+@keyframes text_713 {
     0% {
-      letter-spacing: 1px;
-      transform: translateX(0px);
+        letter-spacing: 1px;
+        transform: translateX(0px);
     }
-  
+
     40% {
-      letter-spacing: 2px;
-      transform: translateX(26px);
+        letter-spacing: 2px;
+        transform: translateX(26px);
     }
-  
+
     80% {
-      letter-spacing: 1px;
-      transform: translateX(32px);
+        letter-spacing: 1px;
+        transform: translateX(32px);
     }
-  
+
     90% {
-      letter-spacing: 2px;
-      transform: translateX(0px);
+        letter-spacing: 2px;
+        transform: translateX(0px);
     }
-  
+
     100% {
-      letter-spacing: 1px;
-      transform: translateX(0px);
-    }
-  }
-  
-  @keyframes loading_713 {
-    0% {
-      width: 16px;
-      transform: translateX(0px);
-    }
-  
-    40% {
-      width: 100%;
-      transform: translateX(0px);
-    }
-  
-    80% {
-      width: 16px;
-      transform: translateX(64px);
-    }
-  
-    90% {
-      width: 100%;
-      transform: translateX(0px);
-    }
-  
-    100% {
-      width: 16px;
-      transform: translateX(0px);
-    }
-  }
-  
-  @keyframes loading2_713 {
-    0% {
-      transform: translateX(0px);
-      width: 16px;
-    }
-  
-    40% {
-      transform: translateX(0%);
-      width: 80%;
-    }
-  
-    80% {
-      width: 100%;
-      transform: translateX(0px);
-    }
-  
-    90% {
-      width: 80%;
-      transform: translateX(15px);
-    }
-  
-    100% {
-      transform: translateX(0px);
-      width: 16px;
-    }
-  }
-   
-   
-  @media (max-width: 470px) {
-    .l{
-        height: 600px;
-       
+        letter-spacing: 1px;
+        transform: translateX(0px);
     }
 }
- 
-  
-  
+
+@keyframes loading_713 {
+    0% {
+        width: 16px;
+        transform: translateX(0px);
+    }
+
+    40% {
+        width: 100%;
+        transform: translateX(0px);
+    }
+
+    80% {
+        width: 16px;
+        transform: translateX(64px);
+    }
+
+    90% {
+        width: 100%;
+        transform: translateX(0px);
+    }
+
+    100% {
+        width: 16px;
+        transform: translateX(0px);
+    }
+}
+
+@keyframes loading2_713 {
+    0% {
+        transform: translateX(0px);
+        width: 16px;
+    }
+
+    40% {
+        transform: translateX(0%);
+        width: 80%;
+    }
+
+    80% {
+        width: 100%;
+        transform: translateX(0px);
+    }
+
+    90% {
+        width: 80%;
+        transform: translateX(15px);
+    }
+
+    100% {
+        transform: translateX(0px);
+        width: 16px;
+    }
+}
+
+
+
+
+/* From Uiverse.io by abrahamcalsin */
+.dot-spinner {
+    --uib-size: 1.5rem;
+    /* border: 2px solid red; */
+    --uib-speed: .9s;
+    --uib-color: #ffffff;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: var(--uib-size);
+    width: var(--uib-size);
+
+}
+
+.dot-flex {
+    padding-left: 80px;
+    /* border: 2px solid red; */
+/*     text-align: center; */
+    /* width: 100% */
+}
+
+.dot-spinner__dot {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100%;
+    width: 100%;
+}
+
+.dot-spinner__dot::before {
+    content: '';
+    height: 20%;
+    width: 20%;
+    border-radius: 50%;
+    background-color: var(--uib-color);
+    transform: scale(0);
+    opacity: 0.5;
+    animation: pulse0112 calc(var(--uib-speed) * 1.111) ease-in-out infinite;
+    box-shadow: 0 0 20px rgba(18, 31, 53, 0.3);
+}
+
+.dot-spinner__dot:nth-child(2) {
+    transform: rotate(45deg);
+}
+
+.dot-spinner__dot:nth-child(2)::before {
+    animation-delay: calc(var(--uib-speed) * -0.875);
+}
+
+.dot-spinner__dot:nth-child(3) {
+    transform: rotate(90deg);
+}
+
+.dot-spinner__dot:nth-child(3)::before {
+    animation-delay: calc(var(--uib-speed) * -0.75);
+}
+
+.dot-spinner__dot:nth-child(4) {
+    transform: rotate(135deg);
+}
+
+.dot-spinner__dot:nth-child(4)::before {
+    animation-delay: calc(var(--uib-speed) * -0.625);
+}
+
+.dot-spinner__dot:nth-child(5) {
+    transform: rotate(180deg);
+}
+
+.dot-spinner__dot:nth-child(5)::before {
+    animation-delay: calc(var(--uib-speed) * -0.5);
+}
+
+.dot-spinner__dot:nth-child(6) {
+    transform: rotate(225deg);
+}
+
+.dot-spinner__dot:nth-child(6)::before {
+    animation-delay: calc(var(--uib-speed) * -0.375);
+}
+
+.dot-spinner__dot:nth-child(7) {
+    transform: rotate(270deg);
+}
+
+.dot-spinner__dot:nth-child(7)::before {
+    animation-delay: calc(var(--uib-speed) * -0.25);
+}
+
+.dot-spinner__dot:nth-child(8) {
+    transform: rotate(315deg);
+}
+
+.dot-spinner__dot:nth-child(8)::before {
+    animation-delay: calc(var(--uib-speed) * -0.125);
+}
+
+@keyframes pulse0112 {
+
+    0%,
+    100% {
+        transform: scale(0);
+        opacity: 0.5;
+    }
+
+    50% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@media (max-width: 470px) {
+    .l {
+        height: 600px;
+
+    }
+    .dot-flex{
+        padding-left: 55px;
+
+/*             text-align: center; */
+            /* width: 100% */
+          }
+}
