--- a/frontend/src/styles/taskList.css
+++ b/frontend/src/styles/taskList.css
@@ -133,7 +133,7 @@ span.profit-color {
   transition: background-color 0.2s ease;
   background-color: #007bff;
   color: #fff;
-  box-shadow: 0 4px 12px rgba(0, 123, 255, 0.4);
+/*   box-shadow: 0 4px 12px rgba(0, 123, 255, 0.4); */
   border-color: #4e73df;
 }
 
