--- a/frontend/src/styles/signup.css
+++ b/frontend/src/styles/signup.css
@@ -81,3 +81,21 @@
   p.signup-error{
     color: red;
   }
+
+@media (max-width: 470px) {
+    .auth-container {
+     
+      height: 550px;
+     
+    }
+   
+    .auth-form {
+
+      padding: 20px;
+      margin: 0px 7px;
+      position: relative;
+      /* top: 21%; */
+      bottom: 23%;
+      
+    }
+  }
