--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -12,7 +12,7 @@
     max-width: 500px;
     margin: auto;
     flex-direction: column;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+/*     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
   }
 
   .signup-img1>img{
