--- a/frontend/src/styles/signup.css
+++ b/frontend/src/styles/signup.css
@@ -7,7 +7,7 @@
     /* border: 2px solid red; */
     max-width: 500px;
     margin: auto;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+/*     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
     /* background: linear-gradient(135deg, #1e3c72, #2a5298); */
   }
   /* .signup-img{
